--- a/src/vendor.css
+++ b/src/vendor.css
@@ -1,3 +1,10 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #eeeeee;
+  font-size: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: #1E88E5;
 }
